Правки после первого ревью.